<resources>
    <string name="app_name">DeviceLens</string>
    <string name="profile_icon_description">Profile Icon</string>
    <string name="search_icon_description">Search Icon</string>
    <string name="search_hint">Search applications...</string>

    <string name="user_apps_tab_title">USER APPS</string>
    <string name="user_apps_tab_description">User Applications Tab</string>

    <string name="system_apps_tab_title">SYSTEM APPS</string>
    <string name="system_apps_tab_description">System Applications Tab</string>

    <string name="device_info_tab_title">DEVICE INFO</string>
    <string name="device_info_tab_description">Device Information Tab</string>

    <!-- App Info texts -->
    <string name="app_name_label">Name:</string>
    <string name="app_package_label">Package:</string>
    <string name="app_uid_label">UID:</string>
    <string name="app_version_label">Version:</string>
    <string name="app_install_date_label">Installed:</string>
    <string name="app_update_date_label">Updated:</string>

    <!-- Device Info texts -->
    <string name="device_brand_label">Brand:</string>
    <string name="device_model_label">Model:</string>
    <string name="device_android_version_label">Android Version:</string>
    <string name="device_sdk_version_label">SDK Version:</string>
    <string name="device_product_label">Product:</string>
    <string name="device_hardware_label">Hardware:</string>
    <string name="device_manufacturer_label">Manufacturer:</string>
    <string name="device_fingerprint_label">Fingerprint:</string>
    <string name="device_board_label">Board:</string>
    <string name="device_host_label">Host:</string>
    <string name="device_id_label">Device ID:</string> <!-- Note: This refers to Build.SERIAL, not IMEI -->
    <string name="device_bootloader_label">Bootloader:</string>
    <string name="device_type_label">Type:</string>
    <string name="device_user_label">User:</string>
</resources>